--- a/src/components/styles/header.scss
+++ b/src/components/styles/header.scss
@@ -1,14 +1,13 @@
-.container{
+.container-header{
     width: 100vw;
     height: 500px;
-    background-color: aqua;
+    color: white;
   }
 
-.container-center{
+.container-center-top-header{
     width: 70%;
     height: 80%;
-    background-color: white;
-    display: flex;
+    display: flex ;
     justify-content: space-between;
 }
 
@@ -18,18 +17,78 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: rgba(255, 255, 255, 0.7);
+  background-color: rgba(0, 0, 0, 0.5);
+  font-size: 1rem;
 
-  .container-center{
+  .container-center-top-header{
       display: flex;
       justify-content: space-between;
       align-items: center;
 
-      .left , .right{
+      .left {
         height: 100%;
         width: 50%;
-        background-color: aquamarine;
-        border: 1px solid black;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+
+        div{
+          height: 50%;
+          width: 100%;
+          display: flex;
+          align-items: center;
+        }
+
+        #home-logo {
+          display: flex;
+          align-items: flex-end;
+          justify-content: flex-start;
+          background-size: cover;
+          img{
+            height: 30px;
+          }
+        }
+        
+      }
+      .right{
+        height: 100%;
+        width: 50%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+
+        #top-right{
+          height: 50%;
+          width: 100%;
+          display: flex;
+          justify-content: flex-end;
+          align-items: center;
+          div:last-child{
+            margin-left: 150px;
+          }
+        }
+
+        #bottom-right {
+          display: flex;
+          align-items: flex-end;
+          justify-content: flex-end;
+          height: 50%;
+          width: 100%;
+          div{
+            ul {
+              display: flex;
+
+              li{
+                list-style: none;
+                margin: 0 5px;
+
+              }
+            }
+          }
+          
+        }
+        
       }
     }
 
@@ -45,12 +104,23 @@
     .container-center{
       display: flex;
       justify-content: flex-start;
-      padding-top: 50px;
         
         .only-left{
           height: 80%;
           width: 50%;
-          background-color: blue;
+
+          * {
+            margin: 10px 0;
+          }
+
+
+          .bottom-header-button{
+            display: flex;
+            button{
+              margin-right: 10px;
+
+            }
+          }
         }
 
     }
