--- a/src/components/styles/header.scss
+++ b/src/components/styles/header.scss
@@ -38,7 +38,13 @@
           width: 100%;
           display: flex;
           align-items: center;
+
+          #icon-top-header{
+            margin-right: 5px;
+          }
         }
+
+
 
         #home-logo {
           display: flex;
