--- a/src/components/styles/main.scss
+++ b/src/components/styles/main.scss
@@ -3,12 +3,16 @@
 .container-our-services{
     width: 100vw;
     height: 500px;
-    background-color: lightblue;
   }
 
 .container-center{
   width: 70%;
   height: 80%;
+  div{
+    h2{
+      text-align: center;
+    }
+  }
   
 }
 
@@ -20,8 +24,9 @@
   align-items: flex-end;
 
     .container-center{
-      text-align: center;
-      background-color: blue;
+      display: flex;
+      justify-content: center;
+      align-items: center;      
 
     }
 
@@ -37,17 +42,34 @@
     .container-center{
       display: flex;
       justify-content: space-between;
-      background-color: blue;
+      
 
       .left{
-        height: 100%;
+        min-height: 100%;
         width: 30%;
-        background-color: aqua;
+        margin-right: 30px;
+        h3{
+          margin: 10px 0;
+        }
+        #OS-left-list{
+          margin: 10px 10px;
+          div{
+            margin: 10px 0;
+          }
+        }
       }
       .right{
         height: 100%;
         width: 70%;
-        background-color: lightcoral;
+        display: flex;
+        flex-wrap: wrap;
+          div{
+            height: 50%;
+            width: 50%;
+            *{
+              margin: 5px 0;
+            }
+          }
       }
     }
 }
