--- a/src/components/styles/main.scss
+++ b/src/components/styles/main.scss
@@ -1,5 +1,4 @@
 // our service
-
 .container-our-services{
     width: 100vw;
     height: 500px;
@@ -78,21 +77,22 @@
 
 .container-play-and-learn{
     width: 100vw;
-    height: 300px;
-    background-color: lightgreen;
+    height: 400px;
 
     .top-play-and-learn{
       height: 50%;
       width: 100%;
-      background-color: crimson;
-      border: 1px solid black;
       display: flex;
 
 
       div {
         height: 100%;
         width: calc(100% / 4);
-        border: 1px solid black;
+        img{
+          height: 100%;
+          width: 100%;
+          background-size: contain;
+        }
 
       }
     }
@@ -100,21 +100,38 @@
     .bottom-play-and-learn{
       height: 50%;
       width: 100%;
-      background-color: crimson;
       border: 1px solid black;
       display: flex;
       justify-content: center;
       align-items: center;
+      background-color: #FFCD18;
 
       .container-center{
         display: flex;
         justify-content: space-between;
         align-items: center;
 
-        .left, .center, .right{
+        .left{
           height: 100%;
-          width: calc(100% / 3);
-          border: 1px solid black;
+          width: 15%;
+          display: flex;
+          justify-content: flex-end;
+          align-items: center;
+        }
+        .center{
+          height: 100%;
+          width: 70%;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          
+        }
+        .right{
+          height: 100%;
+          width: 15%;
+          display: flex;
+          justify-content: flex-start;
+          align-items: center;
         }
       }
     }
