--- a/src/components/styles/reset.scss
+++ b/src/components/styles/reset.scss
@@ -29,9 +29,9 @@
 .button-no-color{
     padding: 10px 20px;
     background-color: rgba(0, 0, 0, 0);
-    color: white;
+    color: black;
     border-radius: 10px;
-    border: 1px solid #ffffff;
+    border: 1px solid black;
 }
 
 .yellow{
