--- a/src/components/styles/footer.scss
+++ b/src/components/styles/footer.scss
@@ -1,7 +1,7 @@
 .container{
   width: 100vw;
-  height: 150px;
-  background-color: aqua;
+  height: 200px;
+  background-color: #404040;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -9,20 +9,54 @@
     .container-center{
     width: 70%;
     height: 80%;
-    background-color: white;
     display: flex;
+    color: white;
       
-      .left , .center{
+      .left{
         height: 100%;
-        width: 25%;
-        background-color: aquamarine;
-        border: 1px solid black;
+        width: 30%;
+        
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        div{
+          height: 100px;
+          aspect-ratio: 1/1;
+        }
+       }
+       .center{
+        height: 100%;
+        width: 20%;
+        display: flex;
+        justify-content: center;
+        margin: 0 50px;
+        div{
+          width: 100%;
+          div:first-child{
+            margin-left: 10px;
+          }
+          div:last-child{
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            div{
+              display: flex;
+              justify-content: center;
+              padding: 10px;
+              margin: 5px;
+              border: 1px solid white;
+              border-radius: 10px;
+            }
+          }
+        }
+        
        }
       .right{
         height: 100%;
         width: 50%;
-        background-color: aquamarine;
-        border: 1px solid black;
+        *{
+          margin-bottom: 10px;
+        }
       }
       
     }
