--- a/src/components/styles/footer.scss
+++ b/src/components/styles/footer.scss
@@ -20,8 +20,13 @@
         flex-direction: column;
         justify-content: space-between;
         div{
-          height: 100px;
-          aspect-ratio: 1/1;
+          
+          img{
+            height: 15px;
+          }
+        }
+        p{
+          font-size: 10px;
         }
        }
        .center{
@@ -29,7 +34,7 @@
         width: 20%;
         display: flex;
         justify-content: center;
-        margin: 0 50px;
+        margin: 0 100px;
         div{
           width: 100%;
           div:first-child{
@@ -54,6 +59,12 @@
       .right{
         height: 100%;
         width: 50%;
+        div{
+          #input-footer{
+            width: 300px;
+            height: 30px;
+          }
+        }
         *{
           margin-bottom: 10px;
         }
