--- a/src/components/styles/header.scss
+++ b/src/components/styles/header.scss
@@ -52,7 +52,7 @@
           justify-content: flex-start;
           background-size: cover;
           img{
-            height: 30px;
+            height: 15px;
           }
         }
         
@@ -134,7 +134,13 @@
             display: flex;
             button{
               margin-right: 10px;
-
+            }
+            #btn-header-learn-more{
+              padding: 5px 30px;
+              background-color: rgba(0, 0, 0, 0);
+              color: white;
+              border-radius: 5px;
+              border-color: white;
             }
           }
         }
