--- a/src/components/styles/reset.scss
+++ b/src/components/styles/reset.scss
@@ -9,11 +9,11 @@
     padding: 5px 30px;
     background-color: #ffffff;
     color: black;
-    border-radius: 10px;
+    border-radius: 5px;
 }
 
 .button-yellow{
-    padding: 10px 30px;
+    padding: 5px 30px;
     background-color: #ffcd18;
     color: black;
     border-radius: 5px;
@@ -27,11 +27,10 @@
 }
 
 .button-no-color{
-    padding: 10px 20px;
+    padding: 5px 30px;
     background-color: rgba(0, 0, 0, 0);
     color: black;
-    border-radius: 10px;
-    border: 1px solid black;
+    border-radius: 5px;
 }
 
 .yellow{
@@ -42,3 +41,6 @@
     font-style: italic;
 }
 
+.bold{
+    font-weight: bold;
+}
